--- a/main.html
+++ b/main.html
@@ -271,144 +271,206 @@
                 <a href="#" class="shopping_link">상품</a>
             </div>
             <div class="group_shop_f">
-                <div class="group_shop">
-                    <div class="group_shop_title">
-                        <a href="/"><img src="/img/right_shop_icon.png"></a>                   
-                        <p id="shop_p1">1 /</p> 
-                        <p id="shop_p2">12</p>       
-                        <a href="#"><i class="fas fa-angle-right" id="shop_li2"></i></a>
-                        <a href="#"><i class="fas fa-angle-left" ></i></a>
-                    </div>
-                    <div class="group_shopping">
-                        <ul class="shopping_li1">
-                            <li>
-                                <a href="/"><img src="/img/shop_img1.png">
-                                <a href="/"><p style="font-weight: bold;">욕설에 감성 한스푼</p></a></a>
-                                <p>역시14만리뷰남달라</p>
-                            </li>     
-                            <li>
-                                <a href="/"><img src="/img/shop_img2.png">
-                                <a href="/"><p style="font-weight: bold;">으악 피부 무슨일이야</p></a></a>
-                                <p>깨끗한물 긴급처방~</p>
-                            </li>  
-                        </ul>
-                        <ul class="shopping_li2">
+                <div class="group_shop_title">
+                    <a href="/"><img src="/img/right_shop_icon.png"></a>
+                    <p id="shop_p1">1 /</p>
+                    <p id="shop_p2">12</p>
+                    <a href="#"><i class="fas fa-angle-right" id="shop_li2"></i></a>
+                    <a href="#"><i class="fas fa-angle-left"></i></a>
+                </div>
+                <div class="group_shopping">
+                    <ul class="shopping_li1">
+                        <li>
+                            <a href="/"><img src="/img/shop_img1.png">
+                                <a href="/">
+                                    <p style="font-weight: bold;">욕설에 감성 한스푼</p>
+                                </a></a>
+                            <p>역시14만리뷰남달라</p>
+                        </li>
+                        <li>
+                            <a href="/"><img src="/img/shop_img2.png">
+                                <a href="/">
+                                    <p style="font-weight: bold;">으악 피부 무슨일이야</p>
+                                </a></a>
+                            <p>깨끗한물 긴급처방~</p>
+                        </li>
+                    </ul>
+                    <ul class="shopping_li2">
                         <li>
                             <a href="/"><img src="/img/shop_img3.png">
-                            <a href="/"><p style="font-weight: bold;">메탈호스그만써요</p></a></a>
+                                <a href="/">
+                                    <p style="font-weight: bold;">메탈호스그만써요</p>
+                                </a></a>
                             <p>실리콘은깨끗해요</p>
-                        </li>  
+                        </li>
                         <li>
                             <a href="/"><img src="/img/shop_img4.png">
-                            <a href="/"><p style="font-weight: bold;">생수 사먹지말고</p></a></a>
+                                <a href="/">
+                                    <p style="font-weight: bold;">생수 사먹지말고</p>
+                                </a></a>
                             <p>물 끓여먹어요</p>
-                        </li>  
+                        </li>
                         <li>
                             <a href="/"><img src="/img/shop_img5.png">
-                            <a href="/"><p style="font-weight: bold;">세균으로 양치해?</p></a></a>
+                                <a href="/">
+                                    <p style="font-weight: bold;">세균으로 양치해?</p>
+                                </a></a>
                             <p>말라야 완벽살균!</p>
-                        </li>  
+                        </li>
                         <li>
                             <a href="/"><img src="/img/shop_img6.png">
-                            <a href="/"><p style="font-weight: bold;">요즘 원룸 필수템</p></a></a>
+                                <a href="/">
+                                    <p style="font-weight: bold;">요즘 원룸 필수템</p>
+                                </a></a>
                             <p>이거 하나면 뽀송</p>
-                        </li>  
+                        </li>
                         <li>
                             <a href="/"><img src="/img/shop_img7.png">
-                            <a href="/"><p style="font-weight: bold;">울퉁불퉁 허벅지</p></a></a>
+                                <a href="/">
+                                    <p style="font-weight: bold;">울퉁불퉁 허벅지</p>
+                                </a></a>
                             <p>4주만 발라봐</p>
-                        </li>                             <li>
+                        </li>
+                        <li>
                             <a href="/"><img src="/img/shop_img8.png">
-                            <a href="/"><p style="font-weight: bold;">아침에 일어나도</p></a></a>
+                                <a href="/">
+                                    <p style="font-weight: bold;">아침에 일어나도</p>
+                                </a></a>
                             <p>허리 안아파요</p>
-                        </li> 
-                        </ul>
-                        <div class="shop_bottom1">
-                            <a href="#" style="font-size:13px; color: red; font-weight: bold;">신상특가</a>
-                            <p>｜ 첫구매 회원 5,000원 쿠폰 증정!</p>
-                            <a href="#"><i class="fas fa-angle-right" style="float:right;"></i></a>
-                        </div>
-                        <div class="shop_bottom2">
-                            <a href="#"><i class="fas fa-angle-left" style="float: left; margin-left: 120px;" ></i></a>
-                            <p id="shop_bottom_p1">5</p>
-                            <p id="shop_bottom_p2"> / 12</p>
-                            <a href="#"><i class="fas fa-angle-right"></i></a>  
-                        </div>
+                        </li>
+                    </ul>
+                    <div class="shop_bottom1">
+                        <a href="#" style="font-size:13px; color: red; font-weight: bold;">신상특가</a>
+                        <p>｜ 첫구매 회원 5,000원 쿠폰 증정!</p>
+                        <a href="#"><i class="fas fa-angle-right" style="float:right;"></i></a>
                     </div>
-                    <div class="more_shop1">
-                        <div class="more_shop_title_1">
-                        <a href="/" class="more_shop1_title">아라크네
-                            <i class="fas fa-angle-right" id="more_shop_i" style="color:gray;"></i></a>                  
-                        <p id="moreshop_p1">1 /</p> 
-                        <p id="moreshop_p2">12</p>       
-                        <a href="#"><i class="fas fa-angle-right" id="more_shop_li2" style="margin-right: 10px;"></i></a>
-                        <a href="#"><i class="fas fa-angle-left" id="more_shop_li2" ></i></a>
-                        </div>
-                        <ul class="more_shop_li1">
-                            <li>
-                                <a href="/"><img src="/img/more_shop1.png">
-                                <a href="/"><p style="font-weight: bold;">압도적인 판매량</p></a></a>
-                                <p>콤비 블라인드</p>
-                            </li>  
-                            <li>
-                                <a href="/"><img src="/img/more_shop2.png">
-                                <a href="/"><p style="font-weight: bold;">따뜻한 분위기의</p></a></a>
-                                <p>우드 블라인드</p>
-                            </li>  
-                            <li>
-                                <a href="/"><img src="/img/more_shop3.png">
-                                <a href="/"><p style="font-weight: bold;">난방의 효율 up!</p></a></a>
-                                <p>암막 롤스크린</p>
-                            </li>  
-                            </ul>
-                    </div>
-                    <div class="more_shop1">
-                        <div class="more_shop_title_1">
-                        <a href="/" class="more_shop1_title">데일리라이크
-                            <i class="fas fa-angle-right" id="more_shop_i" style="color:gray;"></i></a>                  
-                        </div>
-                        <ul class="more_shop_li1">
-                            <li>
-                                <a href="/"><img src="/img/more_shop4.png">
-                                <a href="/"><p style="font-weight: bold;">1만원대 인기템</p></a></a>
-                                <p>BEST 놓치지마요</p>
-                            </li>  
-                            <li>
-                                <a href="/"><img src="/img/more_shop5.png">
-                                <a href="/"><p style="font-weight: bold;">폭신~ BEST발매트</p></a></a>
-                                <p>단3일만! 9,600원</p>
-                            </li>  
-                            <li>
-                                <a href="/"><img src="/img/more_shop6.png">
-                                <a href="/"><p style="font-weight: bold;">지금BEST~15%↓</p></a></a>
-                                <p>폭신~ 인기방석</p>
-                            </li>  
-                            </ul>
-                    </div>
-                    <div class="more_shop1">
-                        <div class="more_shop_title_1">
-                        <a href="/" class="more_shop1_title">창안애
-                            <i class="fas fa-angle-right" id="more_shop_i" style="color:gray;"></i></a>                 
-                        </div>
-                        <ul class="more_shop_li1">
-                            <li>
-                                <a href="/"><img src="/img/more_shop7.png">
-                                <a href="/"><p style="font-weight: bold;">누적후기 184,700</p></a></a>
-                                <p>best콤비블라인드</p>
-                            </li>  
-                            <li>
-                                <a href="/"><img src="/img/more_shop8.png">
-                                <a href="/"><p style="font-weight: bold;">모던감성~연출</p></a></a>
-                                <p>원목우드블라인드</p>
-                            </li>  
-                            <li>
-                                <a href="/"><img src="/img/more_shop9.png">
-                                <a href="/"><p style="font-weight: bold;">아직도 벽에구멍?</p></a></a>
-                                <p>못없이 설치하자!</p>
-                            </li>  
-                            </ul>
+                    <div class="shop_bottom2">
+                        <a href="#"><i class="fas fa-angle-left" style="float: left; margin-left: 120px;"></i></a>
+                        <p id="shop_bottom_p1">5</p>
+                        <p id="shop_bottom_p2"> / 12</p>
+                        <a href="#"><i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
+                <div class="more_shop1">
+                    <div class="more_shop_title_1">
+                        <a href="/" class="more_shop1_title">아라크네
+                            <i class="fas fa-angle-right" id="more_shop_i" style="color:gray;"></i></a>
+                        <p id="moreshop_p1">1 /</p>
+                        <p id="moreshop_p2">12</p>
+                        <a href="#"><i class="fas fa-angle-right" id="more_shop_li2" style="margin-right: 10px;"></i></a>
+                        <a href="#"><i class="fas fa-angle-left" id="more_shop_li2"></i></a>
+                    </div>
+                    <ul class="more_shop_li1">
+                        <li>
+                            <a href="/"><img src="/img/more_shop1.png">
+                                <a href="/">
+                                    <p style="font-weight: bold;">압도적인 판매량</p>
+                                </a></a>
+                            <p>콤비 블라인드</p>
+                        </li>
+                        <li>
+                            <a href="/"><img src="/img/more_shop2.png">
+                                <a href="/">
+                                    <p style="font-weight: bold;">따뜻한 분위기의</p>
+                                </a></a>
+                            <p>우드 블라인드</p>
+                        </li>
+                        <li>
+                            <a href="/"><img src="/img/more_shop3.png">
+                                <a href="/">
+                                    <p style="font-weight: bold;">난방의 효율 up!</p>
+                                </a></a>
+                            <p>암막 롤스크린</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="more_shop1">
+                    <div class="more_shop_title_1">
+                        <a href="/" class="more_shop1_title">데일리라이크
+                            <i class="fas fa-angle-right" id="more_shop_i" style="color:gray;"></i></a>
+                    </div>
+                    <ul class="more_shop_li1">
+                        <li>
+                            <a href="/"><img src="/img/more_shop4.png">
+                                <a href="/">
+                                    <p style="font-weight: bold;">1만원대 인기템</p>
+                                </a></a>
+                            <p>BEST 놓치지마요</p>
+                        </li>
+                        <li>
+                            <a href="/"><img src="/img/more_shop5.png">
+                                <a href="/">
+                                    <p style="font-weight: bold;">폭신~ BEST발매트</p>
+                                </a></a>
+                            <p>단3일만! 9,600원</p>
+                        </li>
+                        <li>
+                            <a href="/"><img src="/img/more_shop6.png">
+                                <a href="/">
+                                    <p style="font-weight: bold;">지금BEST~15%↓</p>
+                                </a></a>
+                            <p>폭신~ 인기방석</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="more_shop1">
+                    <div class="more_shop_title_1">
+                        <a href="/" class="more_shop1_title">창안애
+                            <i class="fas fa-angle-right" id="more_shop_i" style="color:gray;"></i></a>
+                    </div>
+                    <ul class="more_shop_li1" id="more_shop_last">
+                        <li>
+                            <a href="/"><img src="/img/more_shop7.png">
+                                <a href="/">
+                                    <p style="font-weight: bold;">누적후기 184,700</p>
+                                </a></a>
+                            <p>best콤비블라인드</p>
+                        </li>
+                        <li>
+                            <a href="/"><img src="/img/more_shop8.png">
+                                <a href="/">
+                                    <p style="font-weight: bold;">모던감성~연출</p>
+                                </a></a>
+                            <p>원목우드블라인드</p>
+                        </li>
+                        <li>
+                            <a href="/"><img src="/img/more_shop9.png">
+                                <a href="/">
+                                    <p style="font-weight: bold;">아직도 벽에구멍?</p>
+                                </a></a>
+                            <p>못없이 설치하자!</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="last_shop">
+                    <div class="last_shop_title">
+                        <a href="/"><img src="/img/last_shop_icon.png"><p>원쁠딜 전 상품 무료배송!</p></a>
+                        <p id="lastshop_p1">1 /</p>
+                        <p id="lastshop_p2">4</p>
+                        <a href="#"><i class="fas fa-angle-right" id="lastshop_li2"></i></a>
+                        <a href="#"><i class="fas fa-angle-left"></i></a>
+                    </div>
+                    <ul class="lastshop_ul">
+                        <li>
+                            <a href="/"><img src="/img/last_shop1.png" align="1"> 
+                                <p style="margin: 0 20px 0 10px;">새부리형 KF94 50매+50매 국산<br>컬러 황사마스크 대형</p>
+                                <p style="color:red; font-weight: bold;">48%</p>
+                                <p style="font-weight: bold;">12,300원</p></a>
+                        </li>
+                        <li>
+                            <a href="/"><img src="/img/last_shop2.png" align="2">
+                            <p style="margin: 0 20px 0 10px;">첫 수확 대봉감 홍시 2.5kg+2.5kg<br>(총 5kg)</p>
+                            <br>
+                            <p style="color:red; font-weight: bold;">40%</p>
+                            <p style="font-weight: bold;">11,900원</p></a>
+                        </li>
+                        <li>
+                            <a href="/"><img src="/img/last_shop3.png" align="3"> 
+                                <p style="margin: 0 20px 0 10px;">여성 무지 학생 중목 양말 10개+10<br>개(20개)</p>
+                                <p style="color:red; font-weight: bold;">21%</p>
+                                <p style="font-weight: bold;">13,900원</p></a>
+                        </li>
+                </div>   
             </div>
         </div>
             
